@startuml accept_reject_method_densities
!pragma useIntermediatePackages false

class accept_reject_method_densities.GaussianVariateGeneratorWithExponential {
    _μ: None
    _σ: None
}
class accept_reject_method_densities.BetaVariateGeneratorWithGaussian {
    _a: None
    _b: None
}
class accept_reject_method_densities.CosineVariateGeneratorWithUniform {
}

random_number_gen_accept_reject.AcceptanceRejectionMethod <|-- accept_reject_method_densities.GaussianVariateGeneratorWithExponential
random_number_gen_accept_reject.AcceptanceRejectionMethod <|-- accept_reject_method_densities.BetaVariateGeneratorWithGaussian
random_number_gen_accept_reject.AcceptanceRejectionMethod <|-- accept_reject_method_densities.CosineVariateGeneratorWithUniform
footer Generated by //py2puml//
@enduml
